@@ -240,6 +240,7 @@ Version 0.90.0 (former 0.25.0):
 - EXEPATH() on all platforms was omitting the slash at the end of root paths, resulting in a relative or missing path (e.g. "X:\" -> "X:" or "/" -> "")
 - Hang in exec()/chain() functions on Linux if the target executable isn't found (observed with musl libc)
 - Minor scaling bug when using BSAVE to save 16-bit images to BMP, causing barely visible changes and the potential loss of the least significant green bit
+- Potential crash (read-after-free) in gfxlib2 X11 OpenGL backend initialization
 
 
 Version 0.24.0:
